# qa.guru_lesson_17

./: .gitignore  README.md  pyproject.toml  schemas.py
tests/: post_users.json  schemas.py  test_reqres.py  test_reqres_homework.py
tests/utils/: api_methods.py
utils/: api_methods.py
